--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,6 +42,7 @@
 @media (max-width: 768px) {
   .info-btn {
     top: 10px;
+    bottom: 10px;
     right: 15px;
     padding: 0.4rem 0.8rem;
     font-size: 0.85rem;
@@ -248,6 +249,7 @@
     padding: 0.4rem 1rem;
     font-size: 0.85rem;
   }
+
 }
 
 .category-btn.active {
