--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,14 +41,14 @@
 
 @media (max-width: 768px) {
   .info-btn {
-    top: 10px;
+    top: 0.5rem;
     right: 15px;
     padding: 0.4rem 0.8rem;
     font-size: 0.85rem;
   }
 
   .main-title {
-    margin-top: 4rem;
+    margin-top: 0.5rem;
     font-size: clamp(3rem, 13vw, 5rem);
     width: 100%;
     font-weight: 700;
@@ -248,6 +248,7 @@
     padding: 0.4rem 1rem;
     font-size: 0.85rem;
   }
+
 }
 
 .category-btn.active {
