Improve responsive design

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,7 +64,7 @@
 }
 
 .category-btn {
-  padding: 1rem;
+  padding: 0.4rem 1rem;
   border-radius: 20px;
   cursor: pointer;
   white-space: nowrap;
